--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <HTML lang="en">
     <head>
         <link rel = "stylesheet" href="./style.css">
-        <script defer src = "index.js"></script> 
-        <title>Chef's Table</title>
+        <script defer src = "src/index.js"></script> 
+        <title>Finda Show</title>
     </head>
 
     <body>
         <div class="header">    
-            <ul class="watch-list">Watch List</ul>
-            <h1 class="title">Chef's Table</h1>
-            <h4 class="subtitle">Netflix</h4>
+            <button class="watch-list">Watch List</button>
+            <h1 class="title">Show Finder</h1>
+            <h4 class="subtitle">Search for Your Favorite Show</h4>
+            <input id ="search-show" placeholder="Show Name ...">
+            <button id="search-button">Search Show Title</button>
         </div>
         <form>
             <div class="search-bar">
-            <button id="search">Search</button>
             </div>
         </form>
         <div>
